# moodmatch-agent

./: .env.example  .gitignore  AGENT_IMPLEMENTATION.md  MOOD_MAPPINGS_GUIDE.md  POSTMAN_GUIDE.md  README.md  SERVICES_SUMMARY.md  TELEX_INTEGRATION.md  TESTING_EVIDENCE.md  leapcell.toml  main.py  pyproject.toml  quick_postman_test.py  quick_test.py  requirements.txt  telex_workflow.json  test_all_fixes.py  test_curl.sh  test_powershell.ps1  test_request.sh  test_server.py
agents/: __init__.py  moodmatch_agent.py
config/: __init__.py  mood_mappings.py
examples/: agent_example.py  book_example.py  mood_analysis_example.py  movie_example.py  spotify_example.py  unified_example.py
models/: __init__.py  a2a.py
services/: __init__.py  book_service.py  mood_analyzer.py  movie_service.py  spotify_service.py
tests/: test_mood_analyzer.py
